#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2012-02-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9993 released.

        * Forcing Cygwin version to use Cygwin supplied
          BerkeleyDB 4.5 because of problems building BerkeleyDB
          5.3 from source.


2012-01-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9992 released.

        * Misc minor bug fixes.


2011-12-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9991 released.

        * Added more code for diff() functionality.


2011-12-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9990 released.

        * Added more code for diff() functionality.


2011-12-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9989 released.

        * Modified mirror() to do sync on two local directories.

        * Started diff() functionality.


2011-12-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9988 released.

        * Added /bin/vi to search for vi.


2011-12-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9987 released.

        * Updated Makefile.PL to include YAML.

        * Added code to Module/Install/Admin.pm to handle
          error when using Windows executable installer.

        * Added checks for Cygwin sshd and cygserver services
          when FullAuto is running under Cygwin. 


2011-12-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9986 released.

        * Updated Makefile.PL to work with redhat and fedora.


2011-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
