@@ -1,5 +1,5 @@
 This file contains message digests of all files listed in MANIFEST,
-signed via the Module::Signature module, version 0.68.
+signed via the Module::Signature module, version 0.61.
 
 To verify the content in this distribution, first make sure you have
 Module::Signature installed, then type:
@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 aea1623ac6823c9aadbb5c2f0a41f34084bd6db2 ChangeLog
+SHA1 85963493b21b731e78a2d8dfa3b5c189c792c922 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2b6b8f9fc192662e60281ea9353bfafae92e2774 MANIFEST
-SHA1 000eee09d4b502c5330548837e47590367a8fa1e META.yml
+SHA1 1ab74410d412354b24af7d0afb4ccd562df35af5 META.yml
 SHA1 ff35cf1af379307cd2088cf801dcfd3c24c09149 MYMETA.json
 SHA1 1d86d4d631ba1c900fca87906e324e2c894e05d7 MYMETA.yml
-SHA1 41de0beec7df6eb4ccecac98156bc2fa8fb2ce24 Makefile.PL
+SHA1 e5ebfe77dbb78c4fc832a3fa0274e54b4b6def93 Makefile.PL
 SHA1 ffcc80b5c5cbb52f2c2234e9d66f9f32d63f9be7 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -37,7 +37,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 551c2823cf96291f02abcd273ee4a9c2703bc9ec lib/Net/FullAuto.pm
+SHA1 179a7e87ddabc24825edfb631f1f9fd817ff3d35 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 7cacb9a2873a4baac0d084529eed8cb78a301248 lib/Net/FullAuto/Distro/fa_code.pm
@@ -45,16 +45,16 @@ SHA1 45ede5a311a7d3116ca45e7383d75fc47039ea35 lib/Net/FullAuto/Distro/fa_code_de
 SHA1 faa3cdecc1d47c1941ec95294dc86039e9decd21 lib/Net/FullAuto/Distro/fa_conf.pm
 SHA1 97492773d5021025f3239614db3915e85da625de lib/Net/FullAuto/Distro/fa_host.pm
 SHA1 5e5bf1fb274122e41b89de64d065cfbacc8b2cd6 lib/Net/FullAuto/Distro/fa_maps.pm
-SHA1 7563389137eb804672dba8fde06fdaee5f29d295 lib/Net/FullAuto/Distro/fa_menu.pm
+SHA1 a624f36d14585c7635e2a04cb771e0bf0157c0f7 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 a624f36d14585c7635e2a04cb771e0bf0157c0f7 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 53e03d35121070ed8463c687f98652ba96c50045 lib/Net/FullAuto/FA_Core.pm
+SHA1 78aec741dbb956ddf82be8f251fe70de6f7888b3 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk8tnE8ACgkQ2NfPFcKvV2CLxwCeN+PAxAoeBH99EnpouhhVk1Yr
-MVwAnjM57PzCLxYiRLRfUN32LXvSzScS
-=tD7x
+iEYEARECAAYFAk82i+wACgkQJM3IZYB6aOoHzwCglRWzpT97JLbiF1Az8o1W2EPl
+2TYAoJ679Ow/IFGxESsfnIjDJoEBgM+g
+=BiuY
 -----END PGP SIGNATURE-----
