@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9992';
+our $VERSION='0.9994';
 
 
 use 5.005;
